_sass/_layout.scss
///////////////////////////////////////////////////////////////////////////////
// LAYOUT
///////////////////////////////////////////////////////////////////////////////

#page {
	width: 100%;
	height: 100%;
}

#site-header {
	display: flex;

	flex-direction: column;
	align-items: center;

	width: 100%;
	height: 275px;

	background-position: center;
	background-size: cover;
}

.site-header__palette {
	display: flex;

	width: 100%;
	height: 8px;
}

.palette__item {
	width: 20%;
	height: 100%;
}

.site-header__content {
	flex-grow: 1;

	display: flex;
	flex-direction: column;

	width: 100%;

	padding-left: $large-desktop-h-margins;
	padding-right: $large-desktop-h-margins;

	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 50%,rgba(0,0,0,0.50) 100%);
}

@include media-query($desktop) {
	.site-header__content {
		padding-left: $desktop-h-margins;
		padding-right: $desktop-h-margins;
	}
}

@include media-query($phone) {
	.site-header__content {
		padding-left: $phone-h-margins;
		padding-right: $phone-h-margins;
	}
}

@include media-query($tablet) {
	.site-header__content {
		padding-left: $tablet-h-margins;
		padding-right: $tablet-h-margins;
	}
}

.site-header__logo-row {
	flex-grow: 1;

	display: flex;
	justify-content: center;
	align-items: center;

	width: 100%;
}

.logo-row__logo {
	width: 150px;
	height: 150px;
}

.site-header__branding-row {
	@include heading-serif;

	display: flex;

	flex-direction: row;
	justify-content: space-between;
	align-items: flex-end;

	width: 100%;

	font-style: italic;
	font-size: 1.15rem;
	color: $white;
}

.branding-row__name {
	padding-bottom: 5px;
	padding-left: 5px;
	padding-right: 5px;

	border-bottom: 5px solid $white;

	color: $orange;
}

.branding-row__name a {
	text-decoration: none;
	color: $white;

	//text-shadow: $black 0 0 20px;
}

.branding-row__social {
	display: flex;
	flex-direction: row;
}

.branding-row__social__item {
	margin-right: 15px;

	padding-bottom: 5px;
	padding-left: 5px;
	padding-right: 5px;

	border-bottom: 5px solid $white;

	font-size: 1.15em;
	//text-shadow: $black 0 0 20px;
}

.branding-row__social__item a {
	color: $white;
	text-decoration: none;
}

@include media-query($phone) {
	.social__item--secondary {
		display: none;
	}
}

article {
	padding-top: 5%;
	padding-left: $large-desktop-h-margins;
	padding-right: $large-desktop-h-margins;
}

@include media-query($desktop) {
	article {
		padding-left: $desktop-h-margins;
		padding-right: $desktop-h-margins;
	}
}

@include media-query($tablet) {
	article {
		padding-left: $tablet-h-margins;
		padding-right: $tablet-h-margins;
	}
}

#site-footer {
	padding-left: $large-desktop-h-margins;
	padding-right: $large-desktop-h-margins;
	padding-bottom: 5%;
}

@include media-query($desktop) {
	#site-footer {
		padding-left: $desktop-h-margins;
		padding-right: $desktop-h-margins;
	}
}

@include media-query($phone) {
	#site-footer {
		padding-left: $phone-h-margins;
		padding-right: $phone-h-margins;
	}
}

@include media-query($tablet) {
	#site-footer {
		padding-left: $tablet-h-margins;
		padding-right: $tablet-h-margins;
	}
}

.site-footer__disclaimer {
	padding-top: 10px;

	border-top: 1px solid $light-blue;

	font-size: 0.75rem;
	color: $light-blue;
}

.site-footer__copyright {
	border-top: 1px solid $orange;
	padding-top: 10px;
	margin-top: 10px;

	font-size: 0.75rem;
	color: $orange;
}

